Change Session Name by Clicking On File Text. Swal popup will request you to change the name
